--- a/i18n/messages/en.json
+++ b/i18n/messages/en.json
@@ -54,9 +54,9 @@
     }
   },
   "blog": {
-    "title": "Blog",
-    "description": "News, resources, and updates about ShipAny",
-    "read_more_text": "Read More"
+    "title": "WPlace Pixel Blog",
+    "description": "News, resources, and updates about WPlace.live tools and guides",
+    "read_more_text": "Read More About WPlace"
   },
   "my_invites": {
     "title": "My Invites",
