--- a/i18n/pages/landing/en.json
+++ b/i18n/pages/landing/en.json
@@ -31,6 +31,11 @@
           "title": "Blue Marble",
           "url": "/blue-marble",
           "icon": "RiGlobalLine"
+        },
+        {
+          "title": "Blog",
+          "url": "/blog",
+          "icon": "RiArticleLine"
         }
       ]
     },
