--- a/i18n/pages/landing/en.json
+++ b/i18n/pages/landing/en.json
@@ -41,6 +41,10 @@
             {
               "title": "Down Detect",
               "url": "/is-wplace-down"
+            },
+            {
+              "title": "Grass Wonder",
+              "url": "/grass-wonder"
             }
           ]
         },
