--- a/i18n/pages/landing/zh.json
+++ b/i18n/pages/landing/zh.json
@@ -41,6 +41,10 @@
             {
               "title": "宕机检测",
               "url": "/is-wplace-down"
+            },
+            {
+              "title": "草地奇遇",
+              "url": "/grass-wonder"
             }
           ]
         },
