--- a/i18n/pages/wplace-overlay/zh.json
+++ b/i18n/pages/wplace-overlay/zh.json
@@ -4,9 +4,9 @@
     "title": "Wplace 覆盖层 - WPlace.live 高级模板覆盖工具",
     "description": "使用 Wplace Overlay Pro 增强您的 WPlace.live 像素艺术体验 - 终极用户脚本，提供模板覆盖、颜色匹配和协作像素艺术创作功能。",
     "hero": {
-      "title": "Wplace Overlay Pro",
-      "subtitle": "WPlace.live 终极模板覆盖工具",
-      "description": "通过高级模板覆盖功能、颜色匹配和精确放置工具，改变您的协作像素艺术体验。非常适合协调的社区项目和详细的像素艺术创作。",
+      "title": "Wplace Overlay",
+      "subtitle": "使用强大的 TamperMonkey 扩展（Violentmonkey 扩展）和协作像素艺术创作工具增强您的 wplace overlay 体验",
+      "badges": ["像素艺术覆盖", "协作", "实时"],
       "cta": {
         "primary": {
           "title": "安装 Wplace Overlay",
@@ -19,212 +19,145 @@
         }
       }
     },
-    "features": {
-      "title": "像素艺术协作的强大功能",
-      "description": "Wplace Overlay Pro 为您在 WPlace.live 上进行精确高效的像素艺术创作提供所需的一切",
-      "items": [
+    "tools_showcase": {
+      "title": "必备的 Wplace Overlay 资源",
+      "description": "从我们强大的 wplace overlay 工具和扩展集合中选择",
+      "tools": [
         {
-          "title": "模板覆盖系统",
-          "description": "上传 PNG 图像或导入 JSON 模板以覆盖在 WPlace.live 画布上。非常适合协调的社区项目和详细的艺术作品。",
-          "icon": "RiImageLine",
-          "benefits": [
-            "直接 PNG 链接支持",
-            "本地文件上传功能",
-            "JSON 模板导入/导出",
-            "多重覆盖管理"
-          ]
+          "title": "Wplace Overlay Pro TamperMonkey 扩展",
+          "description": "最先进的 wplace overlay 解决方案，具有瓦片覆盖、调整大小和颜色匹配功能",
+          "badges": ["推荐", "TamperMonkey", "画布覆盖", "颜色匹配", "GPLv3"],
+          "features": [
+            "覆盖瓦片放置和自动调整大小",
+            "智能颜色匹配到 wplace 调色板",
+            "高级模板管理系统",
+            "符合网站服务条款"
+          ],
+          "cta": {
+            "title": "安装扩展",
+            "url": "https://greasyfork.org/scripts/wplace-overlay-pro"
+          }
         },
         {
-          "title": "高级颜色匹配",
-          "description": "使用加权距离算法自动将模板颜色匹配到 WPlace 调色板，以获得最佳颜色准确性。",
-          "icon": "RiPaletteLine",
-          "benefits": [
-            "CompuPhase 近似算法",
-            "最近颜色匹配",
-            "调色板优化",
-            "颜色准确性增强"
-          ]
+          "title": "Wplace-BlueMarble 模板覆盖",
+          "description": "专为 wplace.live 协作项目设计的多功能模板覆盖系统",
+          "badges": ["开源", "模板系统", "GitHub"],
+          "features": [
+            "全面的模板管理",
+            "用户友好的覆盖控制",
+            "增强的生产力功能",
+            "无缝协作创作"
+          ],
+          "cta": {
+            "title": "在 GitHub 查看",
+            "url": "https://github.com/wplace-bluemarble/template-overlay"
+          }
         },
         {
-          "title": "精确放置工具",
-          "description": "点击放置功能，带有偏移调整和微调控制，实现完美的模板定位。",
-          "icon": "RiCrosshairLine",
-          "benefits": [
-            "自动捕获放置",
-            "偏移调整控制",
-            "微调定位",
-            "网格完美对齐"
-          ]
-        },
-        {
-          "title": "协作功能",
-          "description": "通过 JSON 导出/导入与团队共享模板，协调大规模社区艺术项目。",
-          "icon": "RiTeamLine",
-          "benefits": [
-            "通过 JSON 共享模板",
-            "社区协调",
-            "多用户协作",
-            "项目管理工具"
-          ]
-        },
-        {
-          "title": "可定制界面",
-          "description": "可拖拽 UI、可折叠面板、明暗主题和透明度控制，打造完美的工作环境。",
-          "icon": "RiSettings3Line",
-          "benefits": [
-            "浮动可拖拽窗口",
-            "明暗主题",
-            "透明度调整",
-            "可折叠 UI 元素"
-          ]
-        },
-        {
-          "title": "高级模式",
-          "description": "符号/色盲模式、像素缩小模式和调整大小功能，适用于特殊用例。",
-          "icon": "RiEyeLine",
-          "benefits": [
-            "色盲无障碍",
-            "基于符号的覆盖",
-            "像素缩小",
-            "调整大小功能"
-          ]
+          "title": "clrfl 的 WplaceOverlay",
+          "description": "轻量级高效的 wplace overlay 实现，代码库简洁",
+          "badges": ["轻量级", "简洁代码", "社区"],
+          "features": [
+            "专注性能的设计",
+            "简单可靠的功能",
+            "最小资源使用",
+            "社区驱动开发"
+          ],
+          "cta": {
+            "title": "查看仓库",
+            "url": "https://github.com/clrfl/wplace-overlay"
+          }
         }
       ]
     },
-    "installation": {
-      "title": "简易安装指南",
-      "description": "只需几个简单步骤即可开始使用 Wplace Overlay Pro",
+    "getting_started": {
+      "title": "开始使用 Wplace Overlay",
+      "description": "通过这些简单步骤开始您的 wplace overlay 之旅，安装和使用 TamperMonkey 扩展工具",
       "steps": [
         {
           "step": 1,
-          "title": "安装用户脚本管理器",
-          "description": "安装 Tampermonkey（推荐）、Greasemonkey 或 Violentmonkey 浏览器扩展",
+          "title": "安装 TamperMonkey",
+          "description": "为您的浏览器添加 TamperMonkey 扩展以进行用户脚本管理",
+          "details": [
+            "TamperMonkey 是一个流行的用户脚本管理器，允许您在网站上运行自定义脚本",
+            "它适用于 Chrome、Firefox、Safari 和 Edge 浏览器",
+            "该扩展免费且安全使用"
+          ],
           "links": [
             {
-              "title": "Chrome 版 Tampermonkey",
+              "title": "Chrome 版 TamperMonkey",
               "url": "https://chrome.google.com/webstore/detail/tampermonkey/dhdgffkkebhmkfjojejmpbldmpobfkfo",
               "target": "_blank"
             },
             {
-              "title": "Firefox 版 Tampermonkey",
+              "title": "Firefox 版 TamperMonkey",
               "url": "https://addons.mozilla.org/en-US/firefox/addon/tampermonkey/",
+              "target": "_blank"
+            },
+            {
+              "title": "Edge 版 TamperMonkey",
+              "url": "https://microsoftedge.microsoft.com/addons/detail/tampermonkey/iikmkjmpaadaobahmlepeloendndfphd",
               "target": "_blank"
             }
           ]
         },
         {
           "step": 2,
-          "title": "安装 Wplace Overlay Pro",
-          "description": "点击 Greasy Fork 上的安装按钮，将脚本添加到您的用户脚本管理器",
-          "links": [
+          "title": "选择您的工具",
+          "description": "选择最适合您创作需求的 wplace overlay 脚本",
+          "details": [
+            "我们提供多种具有不同功能和能力的覆盖工具",
+            "Wplace Overlay Pro 是我们最先进的解决方案，具有全面的功能",
+            "根据您的具体要求和技术偏好进行选择"
+          ],
+          "options": [
             {
-              "title": "从 Greasy Fork 安装",
-              "url": "https://greasyfork.org/en/scripts/545041-wplace-overlay-pro",
-              "target": "_blank"
+              "name": "Wplace Overlay Pro",
+              "description": "具有完整功能的最先进解决方案",
+              "recommended": true,
+              "url": "https://greasyfork.org/en/scripts/wplace-overlay-pro"
+            },
+            {
+              "name": "Wplace-BlueMarble",
+              "description": "开源模板覆盖系统",
+              "recommended": false,
+              "url": "https://github.com/wplace-bluemarble/template-overlay"
+            },
+            {
+              "name": "clrfl 的 WplaceOverlay",
+              "description": "轻量级高效实现",
+              "recommended": false,
+              "url": "https://github.com/clrfl/wplace-overlay"
             }
           ]
         },
         {
           "step": 3,
-          "title": "访问 WPlace.live",
-          "description": "导航到 WPlace.live，覆盖界面将自动出现",
-          "links": [
-            {
-              "title": "前往 WPlace.live",
-              "url": "https://wplace.live",
-              "target": "_blank"
-            }
-          ]
-        }
-      ]
-    },
-    "usage": {
-      "title": "如何使用 Wplace Overlay",
-      "description": "通过这些基本技巧掌握模板覆盖的艺术",
-      "guides": [
-        {
-          "title": "基本模板覆盖",
-          "steps": [
-            "在安装脚本的情况下打开 WPlace.live",
-            "在覆盖界面中粘贴直接 PNG 链接",
-            "为您的覆盖命名以便识别",
-            "在右上角切换\"放置覆盖\"选项",
-            "点击画布上您想要左上角的位置",
-            "等待几秒钟让覆盖出现",
-            "再次切换以停止移动覆盖"
+          "title": "安装脚本",
+          "description": "点击安装按钮将 wplace overlay 脚本添加到 TamperMonkey",
+          "details": [
+            "导航到您选择的脚本页面（Greasy Fork 或 GitHub）",
+            "点击\"安装\"或\"Raw\"按钮在 TamperMonkey 中打开脚本",
+            "查看脚本权限并在 TamperMonkey 对话框中点击\"安装\"",
+            "脚本将自动为 wplace.live 启用"
           ]
         },
         {
-          "title": "颜色匹配",
-          "steps": [
-            "上传或链接您的模板图像",
-            "启用颜色匹配工具",
-            "选择最近颜色匹配模式",
-            "脚本将自动优化颜色",
-            "查看颜色匹配预览",
-            "将优化的模板应用到画布"
+          "step": 4,
+          "title": "开始创作",
+          "description": "访问 WPlace.live 并开始您的协作像素艺术之旅",
+          "details": [
+            "在浏览器中导航到 wplace.live",
+            "覆盖界面将自动出现在页面上",
+            "上传您的模板图像或导入 JSON 模板",
+            "定位您的模板并开始协作放置像素"
+          ],
+          "tips": [
+            "使用透明背景的 PNG 图像以获得最佳效果",
+            "从简单模板开始熟悉界面",
+            "使用模板共享功能与团队协调",
+            "尊重网站的服务条款和社区准则"
           ]
-        },
-        {
-          "title": "模板共享",
-          "steps": [
-            "创建您的模板覆盖",
-            "使用导出功能生成 JSON",
-            "与团队成员共享 JSON 文件",
-            "团队成员可以通过 JSON 链接导入",
-            "协调放置和时间",
-            "执行协作像素艺术项目"
-          ]
-        }
-      ]
-    },
-    "compatibility": {
-      "title": "系统要求",
-      "description": "Wplace Overlay Pro 针对支持的平台进行了最佳性能优化",
-      "requirements": {
-        "supported": {
-          "title": "完全支持",
-          "items": [
-            "Windows + Chrome（推荐）",
-            "Tampermonkey 扩展",
-            "WPlace.live 网站"
-          ]
-        },
-        "limited": {
-          "title": "有限支持",
-          "items": [
-            "其他操作系统",
-            "其他浏览器",
-            "其他用户脚本管理器"
-          ]
-        }
-      },
-      "note": "开发者目前仅为 Windows + Chrome 环境提供完全支持。其他配置可能有效，但不受官方支持。"
-    },
-    "community": {
-      "title": "加入社区",
-      "description": "与其他像素艺术家联系，了解最新功能",
-      "links": [
-        {
-          "title": "WPlace.live 社区",
-          "description": "加入主要的协作像素艺术平台",
-          "url": "https://wplace.live",
-          "target": "_blank",
-          "icon": "RiGlobalLine"
-        },
-        {
-          "title": "Greasy Fork 脚本页面",
-          "description": "评分、评论并获取 Wplace Overlay Pro 的更新",
-          "url": "https://greasyfork.org/en/scripts/545041-wplace-overlay-pro",
-          "target": "_blank",
-          "icon": "RiCodeLine"
-        },
-        {
-          "title": "像素艺术转换器",
-          "description": "在覆盖之前将图像转换为像素艺术",
-          "url": "/",
-          "target": "_self",
-          "icon": "RiImageEditLine"
         }
       ]
     },
