--- a/i18n/pages/landing/en.json
+++ b/i18n/pages/landing/en.json
@@ -50,7 +50,7 @@
         },
         {
           "title": "Blue Marble",
-          "url": "/blue-marble",
+          "url": "/blue-marble-wplace",
           "icon": "RiGlobalLine"
         },
         {
